// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsActivity component should render daily room events 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={[MockFunction]}
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="6a244c63-3c2d-46a9-9090-b985cac23357"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="f48c8336-af2c-44ba-96a6-55d85822a5ca"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5d11cbda-b7ae-4dff-a685-c9c414b4f399"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="57751e2c-46e7-4a2d-9b09-01290afc7c2f"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0e9bd70a-0e30-4c37-a804-349a684b4488"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="cd76b0b4-e0b4-4a82-bac8-f13bf3083b6a"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="33a6489b-d7ae-4356-9976-26b184a42894"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="845ae466-e3b4-4353-a3ca-e06692045de0"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="66db58dc-b118-4d1d-a73f-65d0c7b21f3b"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e36c0161-95e7-4f76-a82e-e0aa6674c6d7"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="533297c1-b91c-4546-8700-c6ca0ec31626"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="3bcb75c2-bcaa-4912-9c68-df1f52456341"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a619858a-481d-4dce-911c-63a1a1d1de2d"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="075ddbcd-c134-44b5-8377-e29ec86648f4"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f11857b6-a4c3-4c0e-a42a-d4fd5370b3d1"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="2ec80c4e-8ca2-4a2b-b1ea-733c03bb085f"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e334cf7e-3001-47ca-9bf7-cb4876c8bcb4"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="4352d43c-2571-4193-8ce9-11c3343c3963"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="3bd2b375-b3c6-40a1-b48d-67c2c1943868"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b4151804-d3ad-4f1a-9aa7-ad0d0e589041"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="3f84df88-ce67-4f42-8c29-4ad8b4844315"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b3c0dcac-b2cc-4e69-b5e2-ccf811d22a8d"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="807beda2-92ff-44ce-b4ce-9a2a7f303d30"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5bc5d7a4-90b9-4456-abca-e04734cd5316"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="bf8d10de-686f-4d66-85ca-42fa87ae853a"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;

exports[`AnalyticsActivity component should render resource not founr 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={
    [MockFunction] {
      "calls": Array [
        Array [
          "analyticsForDailyRoomEvents",
        ],
      ],
    }
  }
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="f14c86f5-af2a-4467-a9c7-da79d3285b67"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="2fee3b78-4c75-4e7c-bbef-c28fd0fb3524"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f87a1ae5-57dc-4edd-aaee-6cbb7579b3c2"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0450bb32-c7ad-4a2c-bbc0-1079fa7c8dd6"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="c4c8882e-587d-4503-96fd-d5cbdefa02dd"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dc3875bf-1b08-4876-83ab-06d9fc898c88"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="49963020-2bad-47f0-a8e7-c36cda4112fe"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9b31fe68-5e98-4479-a854-74006db8a557"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5b4491a3-b60a-4c91-82b5-c5038c94891c"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e5bc496c-a2d6-4091-965d-d0f72d0e0915"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ce7b5942-d0ef-4086-b8e3-ec8152cafd78"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6857f2bc-b46a-4c56-ab5c-111799269209"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f5960635-052e-4cfe-bb68-eb5cab81874b"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="fa2612a7-2a46-4b09-9d7a-8df13ea64296"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e6505742-8b2f-438a-bb6e-584fba370dfe"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dc553ca4-63db-4f4c-a628-81e0b6fdf49f"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="25cadf96-bc4a-43a6-90b3-b669f28072a3"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b36c68e0-449f-4b1f-a91d-119a7351c96f"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f94c2e05-3c08-40d0-abc7-3cc87bf405d9"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f0f1613c-3c74-45cb-8a7a-7995e8bb26e0"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="c10b873d-f0a3-4460-8b73-8f5c321d40b7"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b26d8921-4b58-4b0e-a2ab-e5610fab467d"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="814b2813-8f07-4a97-bc4a-025e36aeed19"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="12c67865-e264-4943-b482-960df90ea399"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="1bc85b9e-a800-40d4-a4ec-71784709b7f0"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;
